--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "test": "tap test/*.test.js"
   },
   "dependencies": {
+    "download-git-repo": "^1.0.2",
+    "download-npm-package": "^3.1.12",
     "keytar": "^4.1.0",
+    "ora": "^2.0.0",
     "shelljs": "^0.8.1",
+    "spinner": "^0.3.4",
     "user-home": "^2.0.0",
     "uvw-commander": "^2.15.1",
-    "uvw-node": "^0.0.4",
     "uvwlib": "^0.0.5"
   },
   "devDependencies": {
